[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uniswap-v3-test-tool"
version = "0.1.0"
description = "全面的Uniswap V3测试工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "web3>=6.0.0",
    "pyyaml>=6.0",
    "behave>=1.2.6",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.16.0",
    "requests>=2.28.0",
    "eth-brownie>=1.19.0",
    "eth-typing>=3.0.0",
    "eth-utils>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["uniswap_v3_test_tool"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
